# amazon-brand-intelligence-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  demo_runner.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
examples/: sample_brands.txt
outputs/demo_reports/: allbirds_20260129_062007.json  allbirds_20260129_062007.md  localcoffeeroasters_20260129_062014.json  localcoffeeroasters_20260129_062014.md  patagonia_20260129_061818.json  patagonia_20260129_061818.md
src/: __init__.py  main.py
src/analyzers/: __init__.py  prompts.py  strategic_analyzer.py
src/config/: __init__.py  settings.py
src/extractors/: __init__.py  brand_extractor.py  prompts.py
src/models/: __init__.py  schemas.py
src/pipeline/: __init__.py  orchestrator.py
src/services/: __init__.py  llm_service.py  search_service.py  validation_service.py
src/utils/: __init__.py  formatters.py  logger.py  retry.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_api_responses.json  mock_data.json  mock_extraction.json  mock_search_results.json
tests/integration/: test_brand_extractor.py  test_cli.py  test_pipeline.py  test_pipeline_orchestrator.py  test_strategic_analyzer.py
tests/unit/: test_analyzer_deep.py  test_analyzer_prompts.py  test_analyzer_service.py  test_formatters.py  test_formatters_extra.py  test_llm_service.py  test_llm_service_extra.py  test_logger.py  test_main_extra.py  test_orchestrator_errors.py  test_orchestrator_extra.py  test_retry.py  test_schemas.py  test_schemas_extra.py  test_search_providers.py  test_search_providers_extra.py  test_search_service.py  test_search_service_deep.py  test_search_service_models.py  test_settings.py  test_strategic_analyzer_extra.py  test_strategic_analyzer_logic.py  test_validation_service.py
tests/unit/extractors/: test_brand_extractor.py  test_prompts.py
